2007-09-03  Peter Bloomfield

	* libinit_balsa/assistant_helper.c:
	(balsa_init_add_table_entry): build with --enable-touch-ui.
	* libinit_balsa/assistant_helper.h: ditto.
	* src/main-window.c: (bw_enable_next_unread), (balsa_window_new),
	(enable_expand_collapse), (balsa_window_enable_mailbox_menus),
	(balsa_window_update_book_menus), (enable_message_menus),
	(balsa_window_set_threading_menu), (show_about_box),
	(show_all_headers_cb), (threading_change_cb), (zoom_cb): remove
	GtkAction code for now.
	* src/main-window.h: ditto.
	* src/sendmsg-window.c: (sendmsg_window_new): build with
	--enable-touch-ui.
	* src/spell-check.c: (balsa_spell_check_init): deprecation
	cleanup.

2007-08-31  Peter Bloomfield

	* src/main-window.c: (bw_enable_next_unread), (balsa_window_new),
	(enable_expand_collapse), (balsa_window_enable_mailbox_menus),
	(balsa_window_set_threading_menu), (contents_cb), (show_about_box),
	(shown_hdrs_radio_cb), (threading_radio_cb), (zoom_in_cb),
	(zoom_out_cb), (zoom_100_cb): incomplete port to GtkAction and
	friends (define USE_GNOMEUIINFO to TRUE in src/main-window.h to
	see how much work remains :()
	* src/main-window.h: ditto.

2007-08-27  Peter Bloomfield

	* libbalsa/send.c: (lbs_process_queue): skip message if it is
	either flagged or deleted--see
	http://mail.gnome.org/archives/balsa-list/2007-August/msg00018.html

2007-08-26  Albrecht Dreß

	* configure.in: s/mime is mature for gpg >= 2.0.4.
	* src/balsa-mblist.c: (bmbl_store_redraw_mbnode): newer icon
	sets distinguish between the "delete" (action) and the "trash
	can" (location) icons.

2007-08-25  Pawel Salek

	* libbalsa/imap/Makefile.am: disable building imap_tst.
	* src/balsa-message.[ch]: choose dialog's parent better.
	* NEWS, configure.in: release 2.3.19.

2007-08-23  Peter Bloomfield

	* src/toolbar-factory.c: gtk_tool_item_set_tooltip_text is since
	(2, 11, 6).

2007-08-23  Peter Bloomfield

	* src/balsa-app.c: (balsa_app_init): deprecation cleanup.
	* src/balsa-app.h: ditto.